k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nss-mysql-app
  namespace: nss-portal
  labels:
    app: nss-mysql-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nss-mysql-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nss-mysql-app
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: nss-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nss-mysql-service
  namespace: nss-portal
spec:
  type: NodePort
  selector:
    app: nss-mysql-app
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
