k8s/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nss-phpmyadmin
  namespace: nss-portal
  labels:
    app: nss-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nss-phpmyadmin
  template:
    metadata:
      labels:
        app: nss-phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nss-phpmyadmin-service
  namespace: nss-portal
spec:
  type: NodePort
  selector:
    app: nss-phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30881
