k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nss-portal-service
  namespace: nss-portal
  labels:
    app.kubernetes.io/name: nss-portal-service
spec:
  type: LoadBalancer
  selector:
    app: nss-portal-app
  ports:
    - name: http
      port: 5000
      targetPort: 3000
